fix: Adjust gap size for settings buttons in mobile stylesheet

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -51,7 +51,7 @@
     .settings {
         margin-left: 0;
         display: flex;
-        gap: 0.125rem;
+        gap: 0.11rem;
         justify-self: flex-start;
     }
     
